@@ -349,11 +349,15 @@ Do a search which matches all documents:
 
 
 Do a similarity search
->>> q = sconn.query_parse('document 2')
+>>> q = sconn.query_parse('document (2 OR 5 OR 8)')
 >>> results = sconn.search(q, 0, 5, sortby="date")
->>> ids = [int(result.id, 16) for result in results]
->>> q2 = sconn.query_similar(ids)
->>> q2
+>>> ids = [result.id for result in results]
+>>> q2 = sconn.query_similar(ids, simterms=5)
+>>> str(q2)
+'Xapian::Query((XB8 ELITE_SET 5 XB5 ELITE_SET 5 XB2 ELITE_SET 5 XBtest ELITE_SET 5 XBdocument))'
+>>> q2 = sconn.query_similar(ids, simterms=5, allow='text')
+>>> str(q2)
+'Xapian::Query((XDdocument ELITE_SET 5 XDthis ELITE_SET 5 XDtest ELITE_SET 5 XDtext ELITE_SET 5 XDmore))'
 
 
 Tidy up after ourselves:
